[package]
name = "bmpf2fnt"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Parse Stranded II .bmpf bitmap font files and generate BMFont .fnt output"
repository = "https://github.com/AvengerAnubis/bmpf2fnt"
homepage = "https://github.com/AvengerAnubis/bmpf2fnt"
documentation = "https://docs.rs/bmpf2fnt"

[dependencies]
image = "0.25"
